Closed Bug 628110 Opened 14 years ago Closed 14 years ago

Sunspider regression (350 -> 380ms)

Categories

(Core :: JavaScript Engine, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: spammaaja, Assigned: pcwalton)

References

()

Details

(Keywords: regression, Whiteboard: [hardblocker])

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9) Gecko/20100101 Firefox/4.0b9 Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b10pre) Gecko/20110122 Firefox/4.0b10pre Working: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20110112 Firefox/4.0b9pre http://hg.mozilla.org/tracemonkey/rev/a1d376c7a962 353.3ms +/- 0.8% http://www2.webkit.org/perf/sunspider-0.9.1/sunspider-0.9.1/results.html?%7B%22v%22:%20%22sunspider-0.9.1%22,%20%223d-cube%22:%5B20,20,20,20,20,20,21,18,20,21%5D,%223d-morph%22:%5B13,13,13,13,12,13,13,12,13,13%5D,%223d-raytrace%22:%5B27,28,28,27,26,27,24,26,27,27%5D,%22access-binary-trees%22:%5B8,8,9,7,7,7,7,8,7,7%5D,%22access-fannkuch%22:%5B19,18,19,18,18,19,18,20,19,19%5D,%22access-nbody%22:%5B9,8,9,9,8,9,8,8,9,9%5D,%22access-nsieve%22:%5B9,10,9,8,9,9,9,9,8,9%5D,%22bitops-3bit-bits-in-byte%22:%5B1,1,1,0,1,1,0,1,1,1%5D,%22bitops-bits-in-byte%22:%5B9,11,10,9,10,9,9,10,10,10%5D,%22bitops-bitwise-and%22:%5B2,2,2,2,2,2,2,2,2,2%5D,%22bitops-nsieve-bits%22:%5B6,7,7,7,7,7,7,6,7,7%5D,%22controlflow-recursive%22:%5B3,3,3,3,4,3,3,3,3,3%5D,%22crypto-aes%22:%5B14,14,14,12,14,14,14,14,13,13%5D,%22crypto-md5%22:%5B5,6,5,6,6,5,6,5,6,5%5D,%22crypto-sha1%22:%5B4,5,4,5,5,5,5,5,5,5%5D,%22date-format-tofte%22:%5B26,22,26,23,25,26,25,25,25,26%5D,%22date-format-xparb%22:%5B29,26,28,33,28,28,28,29,27,28%5D,%22math-cordic%22:%5B11,11,11,10,11,11,13,13,10,11%5D,%22math-partial-sums%22:%5B14,14,15,13,13,14,13,14,14,14%5D,%22math-spectral-norm%22:%5B10,11,11,10,11,11,11,11,11,11%5D,%22regexp-dna%22:%5B17,17,17,17,17,18,16,17,18,17%5D,%22string-base64%22:%5B5,6,6,7,7,6,6,6,6,6%5D,%22string-fasta%22:%5B19,17,19,18,18,20,18,19,19,18%5D,%22string-tagcloud%22:%5B27,29,29,28,29,29,28,29,29,28%5D,%22string-unpack-code%22:%5B33,31,32,31,32,32,31,33,32,32%5D,%22string-validate-input%22:%5B13,13,13,12,14,13,12,13,11,12%5D%7D Regressed: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b10pre) Gecko/20110113 Firefox/4.0b10pre http://hg.mozilla.org/tracemonkey/rev/8cb2574bf7c1 380.1ms +/- 5.3% http://www2.webkit.org/perf/sunspider-0.9.1/sunspider-0.9.1/results.html?%7B%22v%22:%20%22sunspider-0.9.1%22,%20%223d-cube%22:%5B26,25,26,26,27,26,25,26,25,28%5D,%223d-morph%22:%5B13,13,14,12,13,13,13,13,13,13%5D,%223d-raytrace%22:%5B28,28,27,29,26,26,23,27,26,28%5D,%22access-binary-trees%22:%5B7,7,7,7,6,6,6,6,7,6%5D,%22access-fannkuch%22:%5B19,19,19,19,19,20,19,19,18,19%5D,%22access-nbody%22:%5B9,9,10,10,10,9,10,9,9,10%5D,%22access-nsieve%22:%5B8,9,9,9,9,9,9,9,9,9%5D,%22bitops-3bit-bits-in-byte%22:%5B1,1,1,1,1,0,0,1,1,1%5D,%22bitops-bits-in-byte%22:%5B9,10,9,9,9,10,9,9,9,9%5D,%22bitops-bitwise-and%22:%5B3,2,2,2,2,2,2,3,2,2%5D,%22bitops-nsieve-bits%22:%5B7,7,7,7,7,7,7,7,6,7%5D,%22controlflow-recursive%22:%5B4,3,3,3,3,3,3,3,3,3%5D,%22crypto-aes%22:%5B14,14,15,13,13,14,14,12,14,12%5D,%22crypto-md5%22:%5B5,6,5,5,6,6,5,6,5,5%5D,%22crypto-sha1%22:%5B5,4,5,5,4,5,5,5,4,5%5D,%22date-format-tofte%22:%5B28,28,25,27,26,27,23,34,27,27%5D,%22date-format-xparb%22:%5B28,31,28,28,31,29,28,27,101,29%5D,%22math-cordic%22:%5B11,12,10,11,11,12,10,12,10,10%5D,%22math-partial-sums%22:%5B14,14,13,14,14,14,13,13,14,13%5D,%22math-spectral-norm%22:%5B11,12,11,11,11,10,11,11,12,10%5D,%22regexp-dna%22:%5B17,16,16,16,17,17,16,17,17,16%5D,%22string-base64%22:%5B7,6,6,6,7,6,67,6,6,5%5D,%22string-fasta%22:%5B20,20,19,19,20,20,19,19,20,19%5D,%22string-tagcloud%22:%5B29,29,29,29,100,28,29,29,30,27%5D,%22string-unpack-code%22:%5B31,31,31,31,38,31,31,30,32,31%5D,%22string-validate-input%22:%5B13,12,12,12,13,14,12,12,12,13%5D%7D Pushlog: http://hg.mozilla.org/tracemonkey/pushloghtml?fromchange=a1d376c7a962&tochange=8cb2574bf7c1 Reproducible: Always
blocking2.0: --- → ?
Version: unspecified → Other Branch
Keywords: regression
Summary: Sunspider regression (350 -> 380) → Sunspider regression (350 -> 380ms)
JK, what's the corresponding TM regression range? I wish the awfy regress graphs were working. :(
(In reply to comment #1) > JK, what's the corresponding TM regression range? > > I wish the awfy regress graphs were working. :( That's the TM regression range.
Version: Other Branch → Trunk
blocking2.0: ? → betaN+
I bisected and it looks like the patch for 624827 is when it started. It removed some calls to MaybeGC to reduce pause times. Unfortunately, we need these calls during the SunSpider run. They're what allow us to GC in between benchmarks, rather than during the benchmarks themselves. I'm not sure how to resolve this. Maybe someone more familiar with Flight of the Navigator has an idea?
Status: UNCONFIRMED → NEW
Ever confirmed: true
No longer blocks: 624827
Thanks for the bisect. Gregor and Patrick are probably best qualified to fix this.
Assignee: general → pwalton
Its a major perf regression so I am afraid this is a hard blocker.
Whiteboard: [hardblocker]
Attached patch Proposed patch.Splinter Review
This is due to the patch in bug 624867. Requesting approval to back out.
Attachment #506561 - Flags: review?(gal)
Comment on attachment 506561 [details] [diff] [review] Proposed patch. Please investigate further though. Maybe there is a better fix.
Attachment #506561 - Flags: review?(gal)
Attachment #506561 - Flags: review+
Attachment #506561 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: