Bug 628110 - Back out changeset d1adb7b245bd (removal of MaybeGC() every 20th script execution) to fix SunSpider regression. r=gal a=blocking2.0:betaN+