dom/base/nsJSEnvironment.cpp
@@ -1142,6 +1142,7 @@ nsJSContext::nsJSContext(JSRuntime *aRuntime)
     xpc_LocalizeContext(mContext);
   }
   mIsInitialized = PR_FALSE;
+  mNumEvaluations = 0;
   mTerminations = nsnull;
   mScriptsEnabled = PR_TRUE;
   mOperationCallbackTime = 0;
@@ -3337,11 +3338,17 @@ nsJSContext::ScriptEvaluated(PRBool aTerminated)
     delete start;
   }
 
+  mNumEvaluations++;
+
 #ifdef JS_GC_ZEAL
   if (mContext->runtime->gcZeal >= 2) {
     JS_MaybeGC(mContext);
-  }
+  } else
 #endif
+  if (mNumEvaluations > 20) {
+    mNumEvaluations = 0;
+    JS_MaybeGC(mContext);
+  }
 
   if (aTerminated) {
     mOperationCallbackTime = 0;
