dom/base/nsJSEnvironment.h
@@ -245,6 +245,7 @@ private:
   nsrefcnt GetCCRefcnt();
 
   JSContext *mContext;
+  PRUint32 mNumEvaluations;
 
 protected:
   struct TerminationFuncHolder;
